--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 <h2>LOGISTICS ITINERARY</h2>
 <button onclick="addRow()">Add Row</button>
 <button onclick="printItinerary()">Print Itinerary</button>
+<button onclick="refreshSO()">🔄 Refresh SO List</button>
 
 <table id="dataTable">
   <thead>
