--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <tr>
       <th>SO/TO no.</th>
       <th>Qty</th>
+      <th>Item Description</th>
       <th>Address</th>
       <th>Delivery Date</th>
       <th>Contact Person</th>
@@ -34,6 +35,7 @@
   <tbody>
     <tr>
       <td class="clickable">Click to select</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
