--- a/public/index.html
+++ b/public/index.html
@@ -4,52 +4,43 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>GFX ITINERARY</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<link rel="stylesheet" href="style.css">
-
 <body>
 
 <h2>LOGISTICS ITINERARY</h2>
 <button onclick="addRow()">Add Row</button>
-<button onclick="printItinerary()">Print Itinerary</button>
+<div class="dropdown">
+  <button class="dropbtn">Print ▼</button>
+  <div class="dropdown-content">
+    <a href="#" onclick="printItinerary()">Print Itinerary</a>
+    <a href="#" onclick="printPOSFormat()">Label</a>
+  </div>
+</div>
 
-<table id="dataTable">
-  <thead>
-    <tr>
-      <th>SO/TO no.</th>
-      <th>Qty</th>
-      <th>Item Description</th>
-      <th>Address</th>
-      <th>Delivery Date</th>
-      <th>Contact Person</th>
-      <th>Time In</th>
-      <th>Time Out</th>
-      <th>ODOMETER</th>
-      <th>BS</th>
-      <th>Signature</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-
-
-  <tbody>
-    <tr>
-      <td class="clickable">Click to select</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      
-    </tr>
-  </tbody>
-</table>
+<div class="overflow-x-auto mt-4">
+  <table id="dataTable" class="min-w-full border border-gray-300 text-sm text-left text-gray-800">
+    <thead>
+      <tr class="bg-gray-800 text-white text-center">
+        <th class="p-2 min-w-[100px] whitespace-normal">SO/TO no.</th>
+        <th class="p-2 min-w-[60px] whitespace-normal">Qty</th>
+        <th class="p-2 min-w-[200px] whitespace-normal">Item Description</th>
+        <th class="p-2 min-w-[150px] whitespace-normal">Address</th>
+        <th class="p-2 min-w-[130px] whitespace-normal">Delivery Date</th>
+        <th class="p-2 min-w-[150px] whitespace-normal">Contact Person</th>
+        <th class="p-2 min-w-[100px] whitespace-normal">Time In</th>
+        <th class="p-2 min-w-[100px] whitespace-normal">Time Out</th>
+        <th class="p-2 min-w-[120px] whitespace-normal">ODOMETER</th>
+        <th class="p-2 min-w-[80px] whitespace-normal">BS</th>
+        <th class="p-2 min-w-[160px] whitespace-normal">Signature</th>
+        <th class="p-2 min-w-[140px] whitespace-normal">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Table rows will go here -->
+    </tbody>
+  </table>
+</div>
 
 <!-- Modal -->
 <div id="soModal">
@@ -59,8 +50,11 @@
   <button onclick="closeModal()">Close</button>
 </div>
 
+<!-- Hidden POS content for printing -->
+<div id="posPrintArea" style="display: none;">
+  <div id="posItems"></div>
+</div>
+
 <script src="script.js"></script>
-
-
 </body>
 </html>
